# tomato-detection-agentic

./: .gitignore  pyproject.toml  requirements.txt
configs/detr/: detr_1class.yaml  detr_3class.yaml
configs/florence2/: florence_1class_finetune.yaml  florence_1class_zeroshot.yaml  florence_3class_finetune.yaml  florence_3class_zeroshot.yaml
configs/gdino/: gdino_3class.yaml
configs/yolov11/: yolov11_1class.yaml  yolov11_3class.yaml
configs/yolov12/: yolov12_1class.yaml  yolov12_3class.yaml
notebook/: DETR_re.ipynb  Grounding_DINO.ipynb  MMdetection.ipynb  YOLO.ipynb  data.ipynb
notebook/lightning_logs/version_0/: hparams.yaml  metrics.csv
notebook/lightning_logs/version_1/: metrics.csv
notebook/lightning_logs/version_2/: metrics.csv
notebook/lightning_logs/version_3/: events.out.tfevents.1765439940.tako.2812061.0  metrics.csv
scripts/: evaluate.py  test.py  train.py  train.sh  visualization.py
src/: __init__.py  registry.py
src/data/: __init__.py
src/evaluation/: __init__.py  detr_evaluator.py  metrics.py  result_saver.py  yolo_evaluator.py
src/metrics/: __init__.py  classification.py  detection.py  model_complexity.py
src/models/: __init__.py  detr_model.py  florence2_base.py  florence2_finetuned.py  gdino_model.py  yolo_base.py  yolov11_model.py  yolov12_model.py
src/runner/: __init__.py  evaluate_runner.py  test_runner.py  train_runner.py
src/utils/: config.py  experiment.py  training.py  vis_utils.py  vis_utils_bu.py  visualization.py
tomato_detection_agentic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+84 files in other folders)
