[project]
name = "tomato-detection-agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.1,<2.6.0",
    "torchvision>=0.19.1,<0.21.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "transformers>=4.57.3",
    "pytorch-lightning>=2.6.0",
    "torchmetrics>=1.8.2",
    "pycocotools>=2.0.10",
    "pillow>=12.0.0",
    "matplotlib>=3.10.8",
    "timm>=1.0.22",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "ultralytics>=8.3.243",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
